deploy/opa-gatekeeper/contraints/constraint-denyall.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAll
metadata:
  name: deny-all-namespaces
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["*"]
    excludedNamespaces:
      - kube-system
