deploy/opa-gatekeeper/contraints/contraint-deny-elb.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyELB
metadata:
  name: deny-elb
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["*"]
